--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "homepage": "https://henkmoody7.github.io/goit-react-hw-05-movies/",
   "dependencies": {
+    "@emotion/core": "^11.0.0",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.13",
+    "@mui/styled-engine-sc": "^5.10.6",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.4.2",
